Remove use of javax api not included in Android